// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
<styled.button
  variant="secondary"
>
  Text
</styled.button>
`;

exports[`Button Renders primary 1`] = `
<styled.button
  variant="primary"
>
  Text
</styled.button>
`;

exports[`Button Renders secondary 1`] = `
<styled.button
  variant="secondary"
>
  Text
</styled.button>
`;
